# webnet

./: .clangd  .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
include/net/: endpoint.h  tcp_socket.h
include/net/connection/: iacceptor.h  iconnection.h
include/net/core/: endpoint.h  socket.h
include/net/detail/: ip_address.h  platform_error.h  platform_types.h  socket.h  socket_flags.h  socket_handle.h  syscall_helpers.h  task.h
include/net/protocol/tcp/: tcp_acceptor.h  tcp_connection.h  tcp_socket.h
src/: endpoint.cpp  tcp_socket.cpp
src/core/: endpoint.cpp  ip_address.cpp  socket.cpp
src/core/detail/: socket_posix.cpp  socket_windows.cpp
src/detail/: socket.cpp  socket_flags.cpp  socket_posix.cpp  socket_windows.cpp
src/protocol/tcp/: tcp_acceptor.cpp  tcp_connection.cpp  tcp_socket.cpp
tests/: endpoint_test.cpp  ip_address_test.cpp  socket_test.cpp  tcp_socket_test.cpp  tcp_test.cpp
